src/components/AboutMe/AboutMe.module.scss
@import '../../common/styles/variables';
@import '../../common/styles/mixins';

.aboutMeBlock {
  background-color: var(#{--bgPrimaryDefault});
  color: var(#{--textDefault});

  .wrapper {
    min-height: calc(100vh - 70px);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    padding: 100px 0;

    .title {
      margin: 16px 0 0 0;
      display: flex;
      flex-direction: column;
      align-items: center;
      text-align: center;

      h2 {
        font-size: 40px;
        margin: 15px 0 48px;
      }

      h3 {
        background-color: #f5df4f;
        color: #000000;
        padding: 0 8px;
        font-weight: lighter;
        font-size: 15px;
      }
    }

    .infoBlock {
      display: grid;
      grid-template-columns: 3fr 1fr;
      gap: 100px;

      .nameWrapper {
        .nameUnderlineWrapper {
          .name {
            font-size: 32px;

            @media screen and (max-width: 991px) {
              transform: translate(-120%, 0);
            }
          }

          .nameUnderline {
            //margin-left: 5px;
            font-size: 32px;
            font-weight: 700;
            border-bottom: 3px solid $primaryColor;
            transition: 0.2s ease-in-out;
            padding: 0 0 6px 0;
          }
        }

        @media screen and (max-width: 991px) {
          display: flex;
          flex-direction: column;
          align-items: center;
          justify-content: center;
        }
      }

      .numbers {
        display: flex;
        flex-direction: column;
        align-items: center;
        position: relative;

        .number {
          font-size: 150px;
          z-index: 1;
          @include adapt-font(150, 130, 180, 180);

          @media screen and (max-width: 991px) {
            transform: translate(0, 30%);
          }
        }

        .circle {
          position: absolute;
          left: 30%;
          top: 0;
          width: 120px;
          height: 120px;
          border-radius: 50%;
          background-color: $primaryColor;
          display: inline-block;
          margin-right: 10px;

          @media screen and (max-width: 1399px) {
            left: 27%;
          }

          @media screen and (max-width: 1199px) {
            left: 20%;
          }

          @media screen and (max-width: 991px) {
            top: 50%;
            left: 50%;
            transform: translate(-50%, -50%);
          }
        }

        .numberText {
          font-size: 28px;
          text-align: center;

          @media screen and (max-width: 991px) {
            margin-top: 20px;
          }
        }
      }

      p {
        margin-top: 16px;
        font-size: 21px;
        line-height: 1.8;

        @media screen and (max-width: 991px) {
          text-align: center;
        }
      }

      @media screen and (max-width: 991px) {
        grid-template-columns: 1fr;
        gap: 0;
      }
    }

    .personalBlockWrapper {
      width: 100%;
      margin-top: 40px;
      padding-right: 165px;

      .personalBlock {
        display: flex;
        justify-content: space-between;

        .blockWrapper {
          display: flex;
          flex-direction: column;
          align-items: flex-start;

          .title {
            font-size: 16px;
            font-weight: 700;
            color: var(#{--textSecondaryDefault});
          }

          .info {
            margin-top: 10px;
            font-size: 18px;
            font-weight: 700;
          }
        }

        @media screen and (max-width: 991px) {
          display: grid;
          grid-template-columns: 1fr 1fr;
          gap: 0;
        }
      }

      @media screen and (max-width: 991px) {
        display: none;
      }
    }

    @media screen and (max-width: 575px) {
      padding: 0;
    }
  }

  @media screen and (max-width: 575px) {
    padding: 50px 0;
  }
}

